[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "utilities.py",
    "cellml"
]   # or a package folder

[project]
name = "libcellml-python-utils"
version = "0.1.1"
description = "Utility functions for working with libCellML"
requires-python = ">=3.11, <3.14"
dependencies = [
    "libcellml>=0.6.3",
    "requests>=2.32.5",
]   # add any pip-installable deps here